# python-notes

./: .gitignore  README.md  python-naming-convention.txt
basics/: create-py-class.py  create-py-function.py  extract-item-from-json-response.py
python-in-vscode/: README.md
python-in-vscode/local-package-import/: README.md
python-in-vscode/local-package-import/Project1dh/: pyproject.toml
python-in-vscode/local-package-import/Project1dh/project1dh/: module_a.py
python-in-vscode/local-package-import/Project2dh/: requirements.txt
python-in-vscode/local-package-import/Project2dh/project2dh/: main.py
python-in-vscode/my-first-py-app/: README.md  my-first-py-app.code-workspace  setup.py
python-in-vscode/my-first-py-app/my_first_py_app/: main.py
python-in-vscode/my-first-py-app/tests/: test_my_module.py
python-in-vscode/my-local-lib-import/: README.md
python-in-vscode/my-local-lib-import/my-first-py-app/: README.md  pyproject.toml  setup.py
python-in-vscode/my-local-lib-import/my-first-py-app/myfirstpyapp/: main.py
python-in-vscode/my-local-lib-import/my-first-py-app/tests/: test_my_module.py
python-in-vscode/my-local-lib-import/my-second-py-app/: README.md
python-in-vscode/my-local-lib-import/my-second-py-app/mysecondpyapp/: main.py
python-in-vscode/python-minus-m-option/: README.md  e.py
python-in-vscode/python-minus-m-option/src/a/: b.py  b2.py  b3.py
python-in-vscode/python-minus-m-option/src/c/: d.py
