[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myfirstpyapp"
version = "0.1.0"
description = "A sample library for mysecondpyapp"
authors = [
  { name="Your Name", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
